--- a/index.html
+++ b/index.html
@@ -342,14 +342,17 @@
     <hr>
     
     <!--Labels-->
-    <span class="label label-default">Default</span>
-    <h1>Hello <span class="label label-primary">Notice that label inside h1 enlarges!</span></h1>
-    <span class="label label-danger">You can use colours here like before; this one has "Danger"</span>
-    <span class="label label-success">Good job!</span>
-
+    <div class="container">
+      <span class="label label-default">Default</span>
+      <h1>Hello <span class="label label-primary">Notice that label inside h1 enlarges!</span></h1>
+      <span class="label label-danger">You can use colours here like before; this one has "Danger"</span>
+      <span class="label label-success">Good job!</span>
+    </div>
     <!--Badges-->
-    <a href="#">Inbox <span class="badge">50</span></a>
-    <button class="btn btn-primary" type="button">Messages <span class="badge">2</span></button>
+    <div class="container"></div>
+      <a href="#">Inbox <span class="badge">50</span></a>
+      <button class="btn btn-primary" type="button">Messages <span class="badge">2</span></button>
+    </div>
   </div>  
   <hr>
 
