Corrected open divs, footer now shows full width.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         height: 2em;
         text-align: center;
         font-size: large;
-        color: white;
+        color: #efef1f;
         background: #4a4a4f;
-        padding: 5px
-
+        padding: 5px;
+        margin:0;
+        width: 100%
       }
     </style>
 
@@ -347,9 +348,9 @@
       <h1>Hello <span class="label label-primary">Notice that label inside h1 enlarges!</span></h1>
       <span class="label label-danger">You can use colours here like before; this one has "Danger"</span>
       <span class="label label-success">Good job!</span>
-    </div>
+    
     <!--Badges-->
-    <div class="container"></div>
+    
       <a href="#">Inbox <span class="badge">50</span></a>
       <button class="btn btn-primary" type="button">Messages <span class="badge">2</span></button>
     </div>
@@ -403,6 +404,9 @@
   </div>
 <br>
 <br>
+</div>
+</div>
+</div>
   <footer>Compiled with the help of Traversy Media's <a href="https://www.youtube.com/watch?v=5GcQtLDGXy8">Twitter Bootstrap Crash Course</a> video. Well worth watching!</footer>
 
     <!-- Optional JavaScript -->
